# riocore

./: .gitignore  BOARDS.md  CHANGELOG.md  DOCKER.md  MODIFIERS.md  Makefile  PLUGINS.md  README.md  TOOLCHAINS.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
doc/: BOARDS.md  DEVELOPER.md  JSLIB.md  MODBUS.md  MODIFIERS.md  MQTT.md  PINS.md  RIOSUB.md  ROS.md  SIMULATION.md  SLOTS_MODULES.md  SLOTS_MODULES_de.md  XMLGUI.md
doc/example-output/Tangbob/: .config.json
dockerfiles/: Dockerfile.debian11  Dockerfile.debian11-min  Dockerfile.debian12  Dockerfile.debian12-min  Dockerfile.debian12-run  Dockerfile.debian12-run-gowin  Dockerfile.debian12-run-rpi
riocore/: VERSION.py  __init__.py  axisgraph.py  cfggraph.py  checksums.py  components.py  gpios.py  halgraph.py  halpins.py  kicad-images.json  modifiers.py  tab_axis.py  tab_board.py  tab_gateware.py  tab_gpio.py  tab_hal.py  tab_linuxcnc.py  tab_overview.py  tab_pins.py  tab_signals.py  toolchains.json  vcp.py  widgets.py
riocore/apps/: rio_generator.py  rio_plugininfo.py  rio_setup.py  rio_test.py
riocore/boards/: Altera10M08Eval.json  Arty-a7-35t.json  Basys2.json  ESP32-poe-iso.json  ESP32s2mini.json  ICEBreakerV1.0e.json  README.md  Spartan6.json  TangNano20K.json  TangNano9K.json  iCE40HX8K-EVB_minimal.json  iceWerx-iCE40-HX8K.json
riocore/boards/Altera10M08Eval/: README.md  board.json
riocore/boards/AntminerS9/: README.md  board.json
riocore/boards/Arty-a7-35t/: README.md  board.json
riocore/boards/Basys2/: README.md  board.json
riocore/boards/CYC1000/: README.md  board.json
riocore/boards/Colorlight5A-75B-v8.0/: README.md
riocore/boards/Colorlight5A-75E/: README.md  board.json
riocore/boards/Colorlight_i5-v7_0/: README.md  board.json
riocore/boards/Colorlight_i9plus-v6.1/: README.md  board.json
riocore/boards/EBAZ4205/: README.md
riocore/boards/EP2C5T144/: README.md  board.json
riocore/boards/EP4CE6E22C8/: README.md  board.json  pingen.py
riocore/boards/FireAnt/: README.md  board.json
riocore/boards/ICEBreakerV1.0e/: README.md  board.json
riocore/boards/IceShield/: INFO.md  README.md  board.json
riocore/boards/LX9MicroBoard/: README.md  board.json
riocore/boards/Mecanix5ax/: board.json
riocore/boards/MecanixDev/: README.md  board.json
riocore/boards/Mesa7c80/: README.md  board.json
riocore/boards/Mesa7c81/: README.md  board.json
riocore/boards/MotoMan/: README.md  board.json
riocore/boards/Numato-Spartan6/: README.md  board.json
riocore/boards/OctoBot/: README.md
riocore/boards/Olimex-ICE40HX8K-EVB/: README.md  board.json
riocore/boards/Parport/: README.md  board.json  pingen.py
riocore/boards/RPI5/: README.md  board.json  pingen.py
riocore/boards/Spartan6/: README.md  board.json  config.json
riocore/boards/TangNano20K/: README.md  board.json
riocore/boards/TangNano9K/: README.md  board.json
riocore/boards/TangPrimer20K/: README.md  board.json
riocore/boards/TangPrimer20k/: board.json
riocore/boards/TangPrimer25K/: README.md  board.json
riocore/boards/Tangbob/: README.md  board.json
riocore/boards/Tangoboard/: README.md  board.json
riocore/boards/XC7Z010/: README.md  board.json
riocore/boards/esp32-poe-iso/: board.json
riocore/boards/iceWerx-iCE40-HX8K/: README.md  board.json
riocore/boards/icebreaker3x/: board.json
riocore/boards/octobot/: board.json
riocore/boards/rioctrl/: README.md  board.json
riocore/boards/tangoboard/: board.json
riocore/breakouts/china-bob5x/: breakout.json
riocore/breakouts/rpi-byte2bot-db25hat/: breakout.json  pingen.py
riocore/breakouts/rpi-db25hat/: breakout.json  pingen.py
riocore/chipdata/: GW1N-9C.json  GW1NR-9C.json  GW1NSR-4C.json  GW1NZ-1.json  GW2A-18C.json  GW2AR-18C.json  ecp5.json  gowin_devices2chipdata_pinlist.py  ice40.json  icebox_chipdb2chipdata_pinlist.py  max_10.json  trellis_iodb2chipdata_pinlist.py
riocore/configs/Altera10M08Eval/: config-test.json  config.json
riocore/configs/AntminerS9/: config.json
riocore/configs/Arty-a7-35t/: config-lathe.json  config-test.json  config.json
riocore/configs/Basys2/: config-test.json  config.json
riocore/configs/CYC1000/: config.json
riocore/configs/Colorlight5A-75B-v8.0/: config.json
riocore/configs/Colorlight_i5-v7_0/: config-3x.json  config.json
riocore/configs/Colorlight_i9plus-v6.1/: config.json
riocore/files/: Makefile  adoc2helptext.py  confert.py  csv2plugins.py  debouncer.v  fs2bin.py  gowin-pll.py  hal2graphviz.py  hal2html.py  hal_functions.c  halview.py  ise-pll.py  ise-pll.sh  json2pngs.sh  kicad-builder.py  kicad-images.sh  ngc2svg-thumbnailer.sh  ngc2svg.py  oneshot.v  pingen.py  pinmove.py  pinscale.py  plugininfo.py  quartus-pll.sh  rio-install.sh  rio-logo-scale.sh  rio.c  rio_precompile  riocore-installer.sh  rioloader.c  ros_functions.c  scale-board.py  screenshots.sh  sexp.py  sim_parport.py  spiflash-pinctrl.sh  spiflash.sh  stepconf2rio.py  testb_debouncer.v  testb_oneshot.v  (+4 more)
riocore/generator/: Firmware.py  Gateware.py  LinuxCNC.py  Simulator.py  cbase.py  cclient.py  component.py  documentation.py  easycat.py  flexvcp.py  gladevcp.py  hal.py  jslib.py  kicad.py  mqttbridge.py  pyvcp.py  qtpyvcp.py  qtvcp.py  rosbridge.py  tncvcp.py
riocore/gui/: axisgraph.py  boards.py  breakouts.py  cfggraph.py  components.py  flow_tabs.py  gpios.py  halgraph.py  home_helper.py  loader.py  modifiers.py  modules.py  plugins.py  tab_axis.py  tab_axisgraph.py  tab_board.py  tab_config.py  tab_gateware.py  tab_gpio.py  tab_hal.py  tab_json.py  tab_linuxcnc.py  tab_overview.py  tab_pins.py  tab_signals.py  vcp.py  widgets.py
riocore/modules/: china-bob5x.json  cnc-shield-v3.json  icebreaker_led_sw.json  mesa-7i78.json  w5500.json
riocore/plugins/: README.md  __init__.py
tests/unit/: test_LinuxCNC_write_networks.py  test_full.py  test_generator.py  test_gladevcp.py  test_hal_generator.py  test_pyvcp.py  test_qtpyvcp.py  test_qtvcp.py
tests/unit/data/full/TangPrimer25K/ROS/board0/src/rosbridge/: package.xml
tests/unit/data/full/TangPrimer25K/ROS/board0/src/rosbridge/src/: rosbridge.cpp
(+1529 files in other folders)
