[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 230
lint.select = [
     "B009",  # get-attr-with-constant (B009)
     "B010",  # set-attr-with-constant (B010)
     "B011",  # assert-false (B011)
     "B033",  # duplicate-value (B033)
     "C401",  # unnecessary-generator-set (C401)
     "C402",  # unnecessary-generator-dict (C402)
     "C403",  # unnecessary-list-comprehension-set (C403)
     "C404",  # unnecessary-list-comprehension-dict (C404)
     "C405",  # unnecessary-literal-set (C405)
     "C409",  # unnecessary-literal-within-tuple-call (C409)
     "C413",  # unnecessary-call-around-sorted (C413)
     "C414",  # unnecessary-double-cast-or-process (C414)
     "C416",  # unnecessary-comprehension (C416)
     "C419",  # unnecessary-comprehension-in-call (C419)
     "COM819",  # prohibited-trailing-comma (COM819)
     "D201",  # no-blank-line-before-function (D201)
     "D202",  # blank-line-after-function (D202)
     "D204",  # one-blank-line-after-class (D204)
     "D207",  # under-indentation (D207)
     "D208",  # over-indentation (D208)
     "D209",  # new-line-after-last-paragraph (D209)
     "D211",  # blank-line-before-class (D211)
     "D212",  # multi-line-summary-first-line (D212)
     "D214",  # section-not-over-indented (D214)
     "D300",  # triple-single-quotes (D300)
     "D301",  # escape-sequence-in-docstring (D301)
     "D403",  # first-word-uncapitalized (D403)
     "D405",  # capitalize-section-name (D405)
     "D406",  # missing-new-line-after-section-name (D406)
     "D407",  # dashed-underline-after-section (D407)
     "D410",  # no-blank-line-after-section (D410)
     "D411",  # no-blank-line-before-section (D411)
     "D412",  # blank-lines-between-header-and-content (D412)
     "D413",  # missing-blank-line-after-last-section (D413)
     "E",
     "F",  # multi-value-repeated-key-literal (F601)
     "FLY002",  # static-join-to-f-string (FLY002)
     "FURB105",  # print-empty-string (FURB105)
     "FURB110",  # if-exp-instead-of-or-operator (FURB110)
     "FURB122",  # for-loop-writes (FURB122)
     "FURB129",  # readlines-in-for (FURB129)
     "FURB136",  # if-expr-min-max (FURB136)
     "FURB140",  # reimplemented-starmap (FURB140)
     "FURB142",  # for-loop-set-mutations (FURB142)
     "FURB145",  # slice-copy (FURB145)
     "FURB156",  # hardcoded-string-charset (FURB156)
     "FURB157",  # verbose-decimal-constructor (FURB157)
     "FURB167",  # regex-flag-alias (FURB167)
     "FURB171",  # single-item-membership-test (FURB171)
     "FURB188",  # slice-to-remove-prefix-or-suffix (FURB188)
     "FURB192",  # sorted-min-max (FURB192)
     "I001",  # unsorted-imports (I001)
     "ISC001",  # single-line-implicit-string-concatenation (ISC001)
     "ISC003",  # explicit-string-concatenation (ISC003)
     "N804",  # invalid-first-argument-name-for-class-method (N804)
     "PERF102",  # incorrect-dict-iterator (PERF102)
     "PIE790",  # unnecessary-placeholder (PIE790)
     "PIE794",  # duplicate-class-field-definition (PIE794)
     "PIE804",  # unnecessary-dict-kwargs (PIE804)
     "PIE808",  # unnecessary-range-start (PIE808)
     "PIE810",  # multiple-starts-ends-with (PIE810)
     "PLC1802",  # len-test (PLC1802)
     "PLE",  # pylint errors
     "PLR0202",  # no-classmethod-decorator (PLR0202)
     "PLR0402",  # manual-from-import (PLR0402)
     "PLR1711",  # useless-return (PLR1711)
     "PLR1716",  # boolean-chained-comparison (PLR1716)
     "PLR1722",  # sys-exit-alias (PLR1722)
     "PLR1730",  # if-stmt-min-max (PLR1730)
     "PLR1736",  # unnecessary-list-index-lookup (PLR1736)
     "PLR2044",  # empty-comment (PLR2044)
     "PLR5501",  # collapsible-else-if (PLR5501)
     "PLW0120",  # useless-else-on-loop (PLW0120)
     "PT006",  # pytest-parametrize-names-wrong-type (PT006)
     "Q001",  # bad-quotes-multiline-string (Q001)
     "Q002",  # bad-quotes-docstring (Q002)
     "Q003",  # avoidable-escaped-quote (Q003)
     "Q004",  # unnecessary-escaped-quote (Q004)
     "RET501",  # unnecessary-return-none (RET501)
     "RET502",  # implicit-return-value (RET502)
     "RET505",  # superfluous-else-return (RET505)
     "RET506",  # superfluous-else-raise (RET506)
     "RET507",  # superfluous-else-continue (RET507)
     "RET508",  # superfluous-else-break (RET508)
     "RSE102",  # unnecessary-paren-on-raise-exception (RSE102)
     "RUF005",  # collection-literal-concatenation (RUF005)
     "RUF009",  # function-call-in-dataclass-default-argument
     "RUF010",  # explicit-f-string-type-conversion (RUF010)
     "RUF013",  # implicit-optional (RUF013)
     "RUF015",  # unnecessary-iterable-allocation-for-first-element (RUF015)
     "RUF017",  # quadratic-list-summation (RUF017)
     "RUF019",  # unnecessary-key-check (RUF019)
     "RUF021",  # parenthesize-chained-operators (RUF021)
     "RUF022",  # unsorted-dunder-all (RUF022)
     "RUF023",  # unsorted-dunder-slots (RUF023)
     "RUF031",  # incorrectly-parenthesized-tuple-in-subscript (RUF031)
     "RUF046",  # unnecessary-cast-to-int (RUF046)
     "RUF047",  # needless-else (RUF047)
     "RUF051",  # if-key-in-dict-del (RUF051)
     "RUF056",  # falsy-dict-get-fallback (RUF056)
     "SIM110",  # reimplemented-builtin (SIM110)
     "SIM114",  # if-with-same-arms (SIM114)
     "SIM118",  # in-dict-keys (SIM118)
     "SIM201",  # negate-equal-op (SIM201)
     "SIM210",  # if-expr-with-true-false (SIM210)
     "SIM211",  # if-expr-with-false-true (SIM211)
     "SIM212",  # if-expr-with-twisted-arms (SIM212)
     "SIM222",  # expr-or-true (SIM222)
     "SIM300",  # yoda-conditions (SIM300)
     "SIM401",  # if-else-block-instead-of-dict-get (SIM401)
     "SIM905",  # split-static-string (SIM905)
     "SIM910",  # dict-get-with-none-default (SIM910)
     "TCH002",  # typing-only-third-party-import (TCH002)
     "TD006",  # invalid-todo-capitalization (TD006)
     "TRY201",  # verbose-raise (TRY201)
     "UP003",  # type-of-primitive (UP003)
     "UP004",  # useless-object-inheritance (UP004)
     "UP006",  # non-pep585-annotation (UP006)
     "UP008",  # super-call-with-parameters (UP008)
     "UP009",  # utf8-encoding-declaration (UP009)
     "UP010",  # unnecessary-future-import (UP010)
     "UP015",  # redundant-open-modes (UP015)
     "UP018",  # native-literals (UP018)
     "UP023",  # deprecated-c-element-tree (UP023)
     "UP024",  # os-error-alias (UP024)
     "UP025",  # unicode-kind-prefix (UP025)
     "UP026",  # deprecated-mock-import (UP026)
     "UP028",  # yield-in-for-loop (UP028)
     "UP029",  # unnecessary-builtin-import (UP029)
     "UP032",  # f-string (UP032)
     "UP034",  # extraneous-parentheses (UP034)
     "UP035",  # deprecated-import (UP035)
     "UP036",  # outdated-version-block (UP036)
     "UP039",  # unnecessary-class-parentheses (UP039)
     "W291",  # trailing-whitespace (W291)
     "W292",  # missing-newline-at-end-of-file (W292)
     "W293",  # blank-line-with-whitespace (W293)
     "W391",  # too-many-newlines-at-end-of-file (W391)
     "W605",  # invalid-escape-sequence (W605)
 ]
lint.ignore = [
    "D203",  # incorrect-blank-line-before-class (D203)
    "D213",  # multi-line-summary-second-line (D213)
    "E402", # module level import not at top of file
    "E501", # line to long
    "E722", # bare-except
    "E731", # lambda
    "E741", # ambiguous variable name - short names like l, O, I
    "G010", # 'warn' instead of 'warning' - not applicable with twisted.logger.Logger
    "PLC0206", # bug in: Extracting value from dictionary without calling `.items()`
    "PLC1901", # no fixer yet - re-check in future
    "PLW2901", # loop variable overwritten by assignment target - too much work - student job
    "Q", # not forcing double quotes
    "RUF100", # unused-noqa - there is a branch for it but result was not promising - disabled for now - check later
]
lint.fixable = ["A", "B", "C", "D", "E", "F", "I", "PIE", "RET", "C4", "FURB", "UP", "PLR", "W", "TCH", "SIM", "Q", "PT", "RUF", "N", "TD", "PLW", "FLY", "TRY", "ISC", "PERF", "PLC", "RSE", "COM", "SIM210"]
lint.unfixable = ["Q000", "D203", "D213"]

[tool.ruff.lint.isort]
case-sensitive = true
