<?xml version="1.0"?>
<package format="2">
  <name>riobridge</name>
  <version>0.0.0</version>
  <description>Driver for RIO FPGA boards</description>
  <maintainer email="odippel@gmx.de">Oliver Dippel</maintainer>
  <license>GPL v2</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export></export>
</package>